Added puppet modules user by base role without agents

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,19 @@ puppet/modules/puppetserver_gem
 puppet/modules/selinux
 puppet/modules/stdlib
 puppet/modules/translate
+
+#CORE
+puppet/modules/cis_linux
+puppet/modules/kmod
+puppet/modules/augeasproviders_sysctl
+puppet/modules/augeasproviders_grub
+puppet/modules/augeasproviders_pam
+puppet/modules/network
+puppet/modules/timezone
+puppet/modules/ntp
+puppet/modules/postfix
+puppet/modules/logrotate
+puppet/modules/facts_core
+puppet/modules/ssh
+puppet/modules/sshkeys_core
+puppet/modules/common
